WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
67541
Assert that PlatformCALayerWinInternal::displayCallback() is only called on the main thread
https://bugs.webkit.org/show_bug.cgi?id=67541
Summary
Assert that PlatformCALayerWinInternal::displayCallback() is only called on t...
Jeff Miller
Reported
2011-09-02 16:48:20 PDT
Assert that PlatformCALayerWinInternal::displayCallback() is only called on the main thread
Attachments
Patch
(1.56 KB, patch)
2011-09-02 16:51 PDT
,
Jeff Miller
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jeff Miller
Comment 1
2011-09-02 16:51:50 PDT
Created
attachment 106225
[details]
Patch
Simon Fraser (smfr)
Comment 2
2011-09-02 17:00:34 PDT
Comment on
attachment 106225
[details]
Patch Can you say when it might not be called on the main thread?
Jeff Miller
Comment 3
2011-09-02 17:13:45 PDT
(In reply to
comment #2
)
> (From update of
attachment 106225
[details]
) > Can you say when it might not be called on the main thread?
I have not found a reproducible case of this, but this assert should help track it down.
Jeff Miller
Comment 4
2011-09-02 17:15:05 PDT
Committed
r94465
: <
http://trac.webkit.org/changeset/94465
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug