Assert that PlatformCALayerWinInternal::displayCallback() is only called on the main thread https://bugs.webkit.org/show_bug.cgi?id=67541

Reviewed by Simon Fraser.

No new tests, covered by existing media tests.

* platform/graphics/ca/win/PlatformCALayerWinInternal.cpp:
(PlatformCALayerWinInternal::displayCallback): Assert that is function is only called on the main thread.


git-svn-id: svn://svn.chromium.org/blink/trunk@94465 bbb929c8-8fbe-4397-9dbb-9b2b20218538