third_party/WebKit/Source/WebCore/platform/graphics/ca/win/PlatformCALayerWinInternal.cpp
@@ -35,6 +35,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "PlatformCALayer.h"
 #include "TextRun.h"
 #include <QuartzCore/CACFLayer.h>
+#include <wtf/MainThread.h>
 
 using namespace std;
 using namespace WebCore;
@@ -63,6 +64,8 @@ PlatformCALayerWinInternal::~PlatformCALayerWinInternal()
 
 void PlatformCALayerWinInternal::displayCallback(CACFLayerRef caLayer, CGContextRef context)
 {
+    ASSERT(isMainThread());
+    
     if (!owner() || !owner()->owner())
         return;
 
